--- a/public/ar.html
+++ b/public/ar.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="/aframe-master.min.js"></script>
-    <script src="/aframe-ar-nft.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="/assets/aframe-master.min.js"></script>
+    <script src="/assets/aframe-ar-nft.js"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
   </head>
 
-  <!-- toggle info box on and off -->
+  <!-- toggle info box on and off, currently unused -->
   <script>
     let showItemInfo = (bool) => {
       window.parent.document
@@ -14,28 +14,63 @@
         .classList.add('--hidden');
     };
 
-
-
     AFRAME.registerComponent('markerhandler', {
       init: function () {
-        var m1 = document.querySelector('.ein-baum');
-        var m2 = document.querySelector('.marker-zwo');
+        const m1 = document.querySelector('.mark1');
+        const m2 = document.querySelector('.mark2');
+        const m3 = document.querySelector('.mark3');
+        const m4 = document.querySelector('.mark4');
+        const m5 = document.querySelector('.mark5');
+        const m6 = document.querySelector('.mark6');
+        const m7 = document.querySelector('.mark7');
+
         const interactionMessage = document.querySelector(
           '.interaction-message'
         );
+        triggerOverlay('marker 2 was found');
         m1.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
-
-          interactionMessage.innerHTML = 'marker 1 found!';
+          interactionMessage.innerHTML = 'marker 1 was found';
           overlay.classList.remove('hidden');
           window.parent.document.querySelector('.item1').classList.add('found');
         });
         m2.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
-
-          interactionMessage.innerHTML = 'marker 2 found!';
+          interactionMessage.innerHTML = 'marker 2 was found';
           overlay.classList.remove('hidden');
           window.parent.document.querySelector('.item2').classList.add('found');
+        });
+        m3.addEventListener('markerFound', () => {
+          const overlay = window.document.querySelector('.top-overlay');
+          interactionMessage.innerHTML = 'marker 3 was found';
+          overlay.classList.remove('hidden');
+          window.parent.document.querySelector('.item3').classList.add('found');
+        });
+        m4.addEventListener('markerFound', () => {
+          const overlay = window.document.querySelector('.top-overlay');
+          interactionMessage.innerHTML = 'marker 4 was found';
+          overlay.classList.remove('hidden');
+
+          window.parent.document.querySelector('.item4').classList.add('found');
+        });
+        m5.addEventListener('markerFound', () => {
+          const overlay = window.document.querySelector('.top-overlay');
+          interactionMessage.innerHTML = 'marker 5 was found';
+          overlay.classList.remove('hidden');
+
+          window.parent.document.querySelector('.item5').classList.add('found');
+        });
+        m6.addEventListener('markerFound', () => {
+          const overlay = window.document.querySelector('.top-overlay');
+          interactionMessage.innerHTML = 'marker 6 was found';
+          overlay.classList.remove('hidden');
+          window.parent.document.querySelector('.item6').classList.add('found');
+        });
+        m7.addEventListener('markerFound', () => {
+          const overlay = window.document.querySelector('.top-overlay');
+          interactionMessage.innerHTML = 'marker 7 was found';
+          overlay.classList.remove('hidden');
+          window.parent.document.querySelector('.item7').classList.add('found');
         });
       },
     });
@@ -46,7 +81,6 @@
       <!-- <button onclick="testFn()">YO</button> -->
       <img src="./text-deco.jpg" alt="" />
       <span class="interaction-message">searching</span>
-      <button onclick=alert("yaa")>snap</button>
       <img class="flipped-corner" src="./text-deco.jpg" alt="" />
     </div>
 
@@ -61,7 +95,7 @@
       </a-assets>
       <!-- Defines the marker that we are going to use. Notice that we are not providing the image file, but the  -->
       <!-- "compiled" .patt file that we got from the online tool. the marker MUST BE ACCESSIBLE VIA HTTPS -->
-      <a-marker markerhandler type="barcode" value="0" class="ein-baum">
+      <a-marker markerhandler type="barcode" value="0" class="mark1">
         <a-gltf-model src="#tree"></a-gltf-model>
         <a-entity
           text="value: 0; color: #BBB"
@@ -70,7 +104,7 @@
           rotation="-90 0 0"
         ></a-entity>
       </a-marker>
-      <a-marker type="barcode" value="1" class="marker-zwo">
+      <a-marker type="barcode" value="1" class="mark2">
         <a-box color="tomato" depth="2" height="2" width="2"></a-box>
         <a-entity
           text="value: 1; color: #BBB"
@@ -79,59 +113,55 @@
           rotation="-90 0 0"
         ></a-entity>
       </a-marker>
-      <a-marker type="barcode" value="2" class="dreiecke-ueberall">
+      <a-marker type="barcode" value="3" class="mark3">
         <a-tetrahedron color="#FF926B" radius="5"></a-tetrahedron>
       </a-marker>
-      <!--
-        <a-marker type="barcode" value="3">
-          <a-gltf-model src="#houses"></a-gltf-model>
-          <a-entity
-            text="value: 3; color: #BBB"
-            position="5 0.2 0"
-            scale="10 10 10"
-            rotation="-90 0 0"
-          ></a-entity>
-        </a-marker>
-        <a-marker type="barcode" value="4">
-          <a-box color="#44444a" depth=".5" height=".5" width=".5"></a-box>
-          <a-entity
-            text="value: 4; color: #BBB"
-            position="5 0.2 0"
-            scale="10 10 10"
-            rotation="-90 0 0"
-          ></a-entity>
-        </a-marker>
-        <a-marker type="barcode" value="5">
-          <a-sphere color="blue" radius=".3" position=".03 0.2 0"></a-sphere>
-          <a-sphere color="green" radius=".2" position="-.03 0.4 0"></a-sphere>
-    
-          <a-entity
-            text="value: 5; color: #BBB"
-            position="5 0.2 0"
-            scale="10 10 10"
-            rotation="-90 0 0"
-          ></a-entity>
-        </a-marker>
-        <a-marker type="barcode" value="6">
-          <a-box color="tomato" depth="1" height="1" width="1"></a-box>
-          <a-entity
-            text="value: 6; color: #BBB"
-            position="5 0.2 0"
-            scale="10 10 10"
-            rotation="-90 0 0"
-          ></a-entity>
-        </a-marker>
-    
-      -->
+
+      <a-marker type="barcode" value="4" class="mark4">
+        <a-box color="#44444a" depth=".5" height=".5" width=".5"></a-box>
+        <a-entity
+          text="value: 4; color: #BBB"
+          position="5 0.2 0"
+          scale="10 10 10"
+          rotation="-90 0 0"
+        ></a-entity>
+      </a-marker>
+
+      <a-marker type="barcode" value="5" class="mark5">
+        <a-box color="#44444a" depth=".5" height=".5" width=".5"></a-box>
+        <a-entity
+          text="value: 5; color: #BBB"
+          position="5 0.2 0"
+          scale="10 10 10"
+          rotation="-90 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker type="barcode" value="6" class="mark6">
+        <a-entity
+          text="value: 6; color: #BBB"
+          position="5 0.2 0"
+          scale="10 10 10"
+          rotation="-90 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker type="barcode" value="7" class="mark7">
+        <a-box color="tomato" depth="1" height="1" width="1"></a-box>
+        <a-entity
+          text="value: 7; color: #BBB"
+          position="5 0.2 0"
+          scale="10 10 10"
+          rotation="-90 0 0"
+        ></a-entity>
+      </a-marker>
 
       <!-- Define the camera of the scene -->
       <a-camera-static> </a-camera-static>
     </a-scene>
     <script>
-          const sceneEl = document.querySelector('.camera-scene');
-    sceneEl.addEventListener('render-target-loaded', function () {
-      // sceneEl.renderer is now set.
-    });
+      const sceneEl = document.querySelector('.camera-scene');
+      sceneEl.addEventListener('render-target-loaded', function () {
+        // sceneEl.renderer is now set.
+      });
     </script>
   </body>
 </html>
