--- a/public/ar.html
+++ b/public/ar.html
@@ -32,45 +32,59 @@
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 1 was found';
           overlay.classList.remove('hidden');
-          window.parent.document.querySelector('.item1').classList.add('found');
+          window.parent.document
+            .querySelector('.item1')
+            .classList.add('--found');
         });
         m2.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 2 was found';
           overlay.classList.remove('hidden');
-          window.parent.document.querySelector('.item2').classList.add('found');
+          window.parent.document
+            .querySelector('.item2')
+            .classList.add('--found');
         });
         m3.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 3 was found';
           overlay.classList.remove('hidden');
-          window.parent.document.querySelector('.item3').classList.add('found');
+          window.parent.document
+            .querySelector('.item3')
+            .classList.add('--found');
         });
         m4.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 4 was found';
           overlay.classList.remove('hidden');
 
-          window.parent.document.querySelector('.item4').classList.add('found');
+          window.parent.document
+            .querySelector('.item4')
+            .classList.add('--found');
         });
         m5.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 5 was found';
           overlay.classList.remove('hidden');
 
-          window.parent.document.querySelector('.item5').classList.add('found');
+          window.parent.document
+            .querySelector('.item5')
+            .classList.add('--found');
         });
         m6.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 6 was found';
           overlay.classList.remove('hidden');
-          window.parent.document.querySelector('.item6').classList.add('found');
+          window.parent.document
+            .querySelector('.item6')
+            .classList.add('--found');
         });
         m7.addEventListener('markerFound', () => {
           const overlay = window.document.querySelector('.top-overlay');
           interactionMessage.innerHTML = 'marker 7 was found';
           overlay.classList.remove('hidden');
-          window.parent.document.querySelector('.item7').classList.add('found');
+          window.parent.document
+            .querySelector('.item7')
+            .classList.add('--found');
         });
       },
     });
