--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       type="application/javascript"
       src="/assets/iframeLoadScene.js"
     ></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
   </head>
 
-  <script>
+  <!-- <script>
     var socket = io();
-  </script>
+  </script> -->
 
   <script>
     const itemText = [
