--- a/ar.html
+++ b/ar.html
@@ -110,13 +110,12 @@
       <!-- Defines the marker that we are going to use. Notice that we are not providing the image file, but the  -->
       <!-- "compiled" .patt file that we got from the online tool. the marker MUST BE ACCESSIBLE VIA HTTPS -->
       <a-marker markerhandler type="barcode" value="0" class="mark1">
-        <a-gltf-model src="#tree"></a-gltf-model>
-        <a-entity
-          text="value: 0; color: #BBB"
-          position="5 0.2 0"
-          scale="10 10 10"
-          rotation="-90 0 0"
-        ></a-entity>
+        <!-- <a-gltf-model src="#tree"></a-gltf-model> -->
+        <a-box
+          position="0 0.5 0"
+          material="color: red; transparent: true; opacity: 0.50;"
+        >
+        </a-box>
       </a-marker>
       <a-marker type="barcode" value="1" class="mark2">
         <a-box color="tomato" depth="2" height="2" width="2"></a-box>
