--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="assets/style.css" />
     <!-- import the webpage's javascript file -->
-    <script src="./assets/iframeLoadScene.js"></script>
+    <script src="assets/iframeLoadScene.js"></script>
     <!-- <script src="/socket.io/socket.io.js"></script> -->
   </head>
 
