--- a/ar.html
+++ b/ar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="/assets/aframe-master.min.js"></script>
-    <script src="/assets/aframe-ar-nft.js"></script>
-    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
+    <script src="./assets/aframe-master.min.js"></script>
+    <script src="./assets/aframe-ar-nft.js"></script>
+    <link rel="stylesheet" type="text/css" href="./assets/style.css" />
   </head>
 
   <!-- toggle info box on and off, currently unused -->
@@ -95,7 +95,7 @@
       <!-- <button onclick="testFn()">YO</button> -->
       <img src="./text-deco.jpg" alt="" />
       <span class="interaction-message">searching</span>
-      <img class="flipped-corner" src="./text-deco.jpg" alt="" />
+      <img class="flipped-corner" src="./assets/text-deco.jpg" alt="" />
     </div>
 
     <a-scene
