--- a/ar.html
+++ b/ar.html
@@ -93,7 +93,7 @@
   <body style="margin: 0px; overflow: hidden">
     <div class="top-overlay">
       <!-- <button onclick="testFn()">YO</button> -->
-      <img src="./text-deco.jpg" alt="" />
+      <img src="./assets/text-deco.jpg" alt="" />
       <span class="interaction-message">searching</span>
       <img class="flipped-corner" src="./assets/text-deco.jpg" alt="" />
     </div>
