--- a/client/public/assets/ar.html
+++ b/client/public/assets/ar.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="/assets/aframe-master.min.js"></script>
-    <script src="/assets/aframe-ar-nft.js"></script>
-    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
+    <script src="./aframe-master.min.js"></script>
+    <script src="./aframe-ar-nft.js"></script>
+    <link rel="stylesheet" type="text/css" href="./ar-style.css" />
   </head>
 
   <!-- toggle info box on and off, currently unused -->
@@ -24,29 +24,28 @@
         const m6 = document.querySelector('.mark6');
         const m7 = document.querySelector('.mark7');
 
-        const interactionMessage = document.querySelector(
-          '.interaction-message'
-        );
-        triggerOverlay('marker 2 was found');
+        function triggerOverlay(text) {
+          const interactionMessage = document.querySelector(
+            '.interaction-message'
+          );
+          interactionMessage.textContent = text;
+        }
         m1.addEventListener('markerFound', () => {
-          const overlay = window.document.querySelector('.top-overlay');
-          interactionMessage.innerHTML = 'marker 1 was found';
+          triggerOverlay('marker 1 was found');
           overlay.classList.remove('hidden');
           window.parent.document
             .querySelector('.item1')
             .classList.add('--found');
         });
         m2.addEventListener('markerFound', () => {
-          const overlay = window.document.querySelector('.top-overlay');
-          interactionMessage.innerHTML = 'marker 2 was found';
+          triggerOverlay('marker 2 was found');
           overlay.classList.remove('hidden');
           window.parent.document
             .querySelector('.item2')
             .classList.add('--found');
         });
         m3.addEventListener('markerFound', () => {
-          const overlay = window.document.querySelector('.top-overlay');
-          interactionMessage.innerHTML = 'marker 3 was found';
+          triggerOverlay('marker 3 was found');
           overlay.classList.remove('hidden');
           window.parent.document
             .querySelector('.item3')
@@ -104,8 +103,8 @@
       arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     >
       <a-assets>
-        <a-asset-item id="tree" src="./assets/tree.gltf"></a-asset-item>
-        <a-asset-item id="houses" src="./assets/houses.gltf"></a-asset-item>
+        <a-asset-item id="tree" src="./tree.gltf"></a-asset-item>
+        <a-asset-item id="houses" src="./houses.gltf"></a-asset-item>
       </a-assets>
       <!-- Defines the marker that we are going to use. Notice that we are not providing the image file, but the  -->
       <!-- "compiled" .patt file that we got from the online tool. the marker MUST BE ACCESSIBLE VIA HTTPS -->
