--- a/client/public/assets/ar.html
+++ b/client/public/assets/ar.html
@@ -11,33 +11,48 @@
     function triggerOverlay(text) {
       const interactionMessage = document.querySelector('.interaction-message');
       interactionMessage.textContent = text;
-      overlay.parent.classList.remove('hidden');
+      interactionMessage.parent.classList.remove('hidden');
     }
 
+    // marker detection event handlers
     AFRAME.registerComponent('markerhandler', {
       init: function () {
-        const m0 = document.querySelector('.mark0');
-        const m1 = document.querySelector('.mark1');
-        const m2 = document.querySelector('.mark2');
-        const m3 = document.querySelector('.mark3');
-        const m4 = document.querySelector('.mark4');
-        const m5 = document.querySelector('.mark5');
-        const m6 = document.querySelector('.mark6');
+        const m0 = document.querySelector('.triangulis0');
+        const m1 = document.querySelector('.triangulis1');
+        const m2 = document.querySelector('.triangulis2');
+        const m3 = document.querySelector('.triangulis3');
+        const m4 = document.querySelector('.kleine-stadt');
+        const m5 = document.querySelector('.einzeller');
+        const m6 = document.querySelector('.uhr1');
+        const m7 = document.querySelector('.uhr2');
+        const m8 = document.querySelector('.uhr3');
+        const m9 = document.querySelector('wasserfall');
+        const m10 = document.querySelector('bilderrahmen');
+        const m11 = document.querySelector('musikpflanze');
+        const m12 = document.querySelector('drei-siebe');
+        const m13 = document.querySelector('brennender-baum');
+        const m14 = document.querySelector('chakra1');
+        const m15 = document.querySelector('chakra2');
+        const m16 = document.querySelector('chakra3');
+        const m17 = document.querySelector('chakra4');
+        const m18 = document.querySelector('chakra5');
+        const m19 = document.querySelector('chakra6');
+        const m20 = document.querySelector('chakra7');
 
         m0.addEventListener('markerFound', () => {
-          triggerOverlay('marker 1 was found');
+          triggerOverlay('Triangulis kennengelernt');
           window.parent.document
             .querySelector('.item1')
             .classList.add('--found');
         });
         m1.addEventListener('markerFound', () => {
-          triggerOverlay('marker 1 was found');
-          window.parent.document
-            .querySelector('.item2')
-            .classList.add('--found');
+          //erster marker soll zweites marker overlay triggern, also muss der code anders als be normalen markern
+          triggerOverlay('hmm..');
+          //show marker in overlay
         });
         m2.addEventListener('markerFound', () => {
           triggerOverlay('marker 2 was found');
+          triggerOverlay('manche dinge gehen besser zu dritt');
         });
         m3.addEventListener('markerFound', () => {
           triggerOverlay('marker 3 was found');
@@ -46,17 +61,70 @@
             .classList.add('--found');
         });
         m4.addEventListener('markerFound', () => {
-          triggerOverlay('marker 4 was found');
+          triggerOverlay('cyber stadt');
 
           window.parent.document
             .querySelector('.item4')
             .classList.add('--found');
         });
         m5.addEventListener('markerFound', () => {
-          triggerOverlay('marker 5 was found');
+          triggerOverlay('einzeller');
         });
+        // 3 muss man sammeln bevor das item gesammelt wird
         m6.addEventListener('markerFound', () => {
-          triggerOverlay('marker 6 was found');
+          triggerOverlay('Uhr 1');
+        });
+        m7.addEventListener('markerFound', () => {
+          triggerOverlay('Uhr 2');
+        });
+        m8.addEventListener('markerFound', () => {
+          triggerOverlay('Uhr 3');
+        });
+        m9.addEventListener('markerFound', () => {
+          triggerOverlay('wasserfallllllllllllll');
+        });
+        m10.addEventListener('markerFound', () => {
+          triggerOverlay('bilderrahmen beim klo');
+        });
+        m11.addEventListener('markerFound', () => {
+          triggerOverlay('pflanze gustav');
+        });
+        m12.addEventListener('markerFound', () => {
+          triggerOverlay('3 Siebe');
+          // entweder in AR oder in overlay 3 siebe an text anlegen
+        });
+        m13.addEventListener('markerFound', () => {
+          triggerOverlay('feuer');
+        });
+
+        // chakren kann man in beliebiger reihenfolge sammeln, das letzte zeigt dann die zusammenfassung
+        m14.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 1');
+          collectChakra(1);
+        });
+        m15.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 2');
+          collectChakra(2);
+        });
+        m16.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 3');
+          collectChakra(3);
+        });
+        m17.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 4');
+          collectChakra(4);
+        });
+        m18.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 5');
+          collectChakra(5);
+        });
+        m19.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 6');
+          collectChakra(6);
+        });
+        m20.addEventListener('markerFound', () => {
+          triggerOverlay('chakra 7');
+          collectChakra(7);
         });
       },
     });
@@ -67,17 +135,19 @@
       overlay.textContent = `marker ${e}`;
       window.parent.postMessage(e, '*');
     };
+    const collectChakra = (e) => {
+      window.parent.postMessage(`chakra ${e}`, '*');
+    };
   </script>
 
   <body style="margin: 0px; overflow: hidden">
     <div class="top-overlay">
-      <!-- <button onclick="testFn()">YO</button> -->
       <img src="./text-deco.jpg" alt="" />
       <span class="interaction-message">...</span>
       <img class="flipped-corner" src="./text-deco.jpg" alt="" />
     </div>
 
-    <div class="test-buttons">
+    <!-- <div class="test-buttons">
       <button onclick="handleMarkerTrigger(0)">trigger marker 0</button>
       <button onclick="handleMarkerTrigger(1)">trigger marker 1</button>
       <button onclick="handleMarkerTrigger(2)">trigger marker 2</button>
@@ -85,79 +155,197 @@
       <button onclick="handleMarkerTrigger(4)">trigger marker 4</button>
       <button onclick="handleMarkerTrigger(5)">trigger marker 5</button>
       <button onclick="handleMarkerTrigger(6)">trigger marker 6</button>
-    </div>
-
+    </div> -->
+    <button class="interaction-button" onclick="collectChakra(1)">
+      collect chakra
+    </button>
     <a-scene
       class="camera-scene"
       embedded
-      arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+      arjs="sourceType: webcam; debugUIEnabled: true; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     >
       <a-assets>
-        <a-asset-item id="tree" src="./tree.gltf"></a-asset-item>
-        <a-asset-item id="clock1" src="./clock_A.gltf"></a-asset-item>
-        <a-asset-item id="houses" src="./houses.gltf"></a-asset-item>
+        <a-asset-item id="tree" src="./models/tree.gltf"></a-asset-item>
+        <a-asset-item id="clock1" src="./models/clock_A.gltf"></a-asset-item>
+        <a-asset-item id="clock2" src="./models/clock_B.gltf"></a-asset-item>
+        <a-asset-item id="clock3" src="./models/clock_C.gltf"></a-asset-item>
+        <a-asset-item id="houses" src="./models/houses.gltf"></a-asset-item>
       </a-assets>
       <!-- Defines the marker that we are going to use. Notice that we are not providing the image file, but the  -->
       <!-- "compiled" .patt file that we got from the online tool. the marker MUST BE ACCESSIBLE VIA HTTPS -->
 
-      <a-marker markerhandler type="barcode" value="0" class="mark1">
-        <a-gltf-model src="#clock1"></a-gltf-model>
+      <!-- 0 - triangulis marker einfach -->
+      <a-marker markerhandler type="barcode" value="0" class="triangulis0">
         <a-entity
-          text="value: 0; color: #BBB"
+          text="value: triangulis marker 0; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+        <a-box color="tomato" depth="1" height="1" width="1"></a-box>
+      </a-marker>
+
+      <!-- triangulis kopianer marker 1-3 -->
+      <a-marker type="barcode" value="1" class="triangulis1"> </a-marker>
+      <!-- weitere marker werden in overlays angezeigt, damit -->
+      <a-marker type="barcode" value="2" class="triangulis2"> </a-marker>
+      <a-marker type="barcode" value="3" class="triangulis3"> </a-marker>
+
+      <!-- 4 - kleine stadt (calvin) -->
+      <a-marker type="barcode" value="4" class="kleine-stadt"> </a-marker>
+
+      <!-- 5 - großer einzeller -->
+      <a-marker type="barcode" value="5" class="einzeller"> </a-marker>
+
+      <!-- 6-8 - fraktale uhren (lazaro) -->
+      <a-marker markerhandler type="barcode" value="6" class="uhr1">
+        <a-gltf-model
+          src="#clock1"
           position="0 0 0"
           scale="1 1 1"
+          rotation="90 90 0"
+        ></a-gltf-model>
+
+        <a-entity
+          text="value: erste Uhr; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
           rotation="0 0 0"
         ></a-entity>
       </a-marker>
-      <a-marker type="barcode" value="1" class="mark2">
-        <a-box color="tomato" depth="2" height="2" width="2"></a-box>
-        <a-entity
-          text="value: 1; color: #BBB"
-          position="5 0.2 0"
-          scale="10 10 10"
-          rotation="-90 0 0"
-        ></a-entity>
-      </a-marker>
-      <a-marker type="barcode" value="3" class="mark3">
-        <a-tetrahedron color="#FF926B" radius="5"></a-tetrahedron>
-      </a-marker>
+      <a-marker markerhandler type="barcode" value="7" class="uhr2">
+        <a-gltf-model
+          src="#clock2"
+          position="0 0 0"
+          scale="1 1 1"
+          rotation="90 90 0"
+        ></a-gltf-model>
 
-      <a-marker type="barcode" value="4" class="mark4">
-        <a-box color="#44444a" depth=".5" height=".5" width=".5"></a-box>
         <a-entity
-          text="value: 4; color: #BBB"
-          position="5 0.2 0"
+          text="value: zweite Uhr; color: #333"
+          position="0 0 0"
           scale="10 10 10"
-          rotation="-90 0 0"
+          rotation="0 0 0"
         ></a-entity>
       </a-marker>
-
-      <a-marker type="barcode" value="5" class="mark5">
-        <a-box color="#44444a" depth=".5" height=".5" width=".5"></a-box>
+      <a-marker markerhandler type="barcode" value="8" class="uhr3">
+        <a-gltf-model
+          src="#clock3"
+          position="0 0 0"
+          scale="1 1 1"
+          rotation="90 90 0"
+        ></a-gltf-model>
         <a-entity
-          text="value: 5; color: #BBB"
-          position="5 0.2 0"
+          text="value: dritte Uhr; color: #333"
+          position="0 0 0"
           scale="10 10 10"
-          rotation="-90 0 0"
+          rotation="0 0 0"
         ></a-entity>
       </a-marker>
-      <a-marker type="barcode" value="6" class="mark6">
+      <!-- 9 - Wasserfall -->
+      <a-marker markerhandler type="barcode" value="9" class="wasserfall">
         <a-entity
-          text="value: 6; color: #BBB"
-          position="5 0.2 0"
+          text="value: WASSERFALLLLLLLLLLLL; color: #333"
+          position="0 0 0"
           scale="10 10 10"
-          rotation="-90 0 0"
+          rotation="0 0 0"
         ></a-entity>
       </a-marker>
-      <a-marker type="barcode" value="7" class="mark7">
-        <a-box color="tomato" depth="1" height="1" width="1"></a-box>
+      <!-- 10 - bilderrahmen am toilettenhäuschen -->
+      <a-marker markerhandler type="barcode" value="10" class="bilderrahmen">
         <a-entity
-          text="value: 7; color: #BBB"
-          position="5 0.2 0"
+          text="value: bilderrahmen beim toilettenhaus; color: #333"
+          position="0 0 0"
           scale="10 10 10"
-          rotation="-90 0 0"
+          rotation="0 0 0"
         ></a-entity>
       </a-marker>
+      <!-- 11 - pflanze aufm boden -->
+      <a-marker markerhandler type="barcode" value="11" class="musikpflanze">
+        <a-entity
+          text="value: pflanze aufm boden; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <!-- 12 - 3 siebe (jeremy) -->
+      <a-marker markerhandler type="barcode" value="12" class="drei-siebe">
+        <a-entity
+          text="value: die drei siebe; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <!-- 13 - brennender baum, haus was abgebrannt ist? -->
+      <a-marker markerhandler type="barcode" value="13" class="brennender-baum">
+        <a-entity
+          text="value: brennender baum; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <!--  14-20 chakren (max)
+            beim letzten gesammelten sieht man alles zusammen -->
+      <a-marker markerhandler type="barcode" value="14" class="chakra1">
+        <a-entity
+          text="value: chakra 1; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker markerhandler type="barcode" value="14" class="chakra2">
+        <a-entity
+          text="value: chakra 2; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker markerhandler type="barcode" value="14" class="chakra3">
+        <a-entity
+          text="value: chakra 3; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker markerhandler type="barcode" value="14" class="chakra4">
+        <a-entity
+          text="value: chakra 4; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker markerhandler type="barcode" value="14" class="chakra5">
+        <a-entity
+          text="value: chakra 5; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker markerhandler type="barcode" value="14" class="chakra6">
+        <a-entity
+          text="value: chakra 6; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <a-marker markerhandler type="barcode" value="14" class="chakra7">
+        <a-entity
+          text="value: chakra 7; color: #333"
+          position="0 0 0"
+          scale="10 10 10"
+          rotation="0 0 0"
+        ></a-entity>
+      </a-marker>
+      <!-- 
 
       <!-- Define the camera of the scene -->
       <a-camera-static> </a-camera-static>
@@ -172,6 +360,6 @@
 </html>
 <style>
   html {
-    width: 100vw;
+    /* width: 100vw; */
   }
 </style>
